--- a/style.css
+++ b/style.css
@@ -1,3 +1,39 @@
 body {
+    font-size: 20px;
     width: 100%;
+    margin: 0;
+    font-family: 'Hind Vadodara', sans-serif;
+    background-color: #F4F4F4;
+    color: #505050;
+  }
+
+  nav {
+    height: 64px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+footer {
+    display: flex;
+    font-size: .75rem;
+    justify-content: space-between;
+    margin-right: 24px;
+    margin-left: 24px;
+    margin-top: 16px;
+
+
+
 }
+
+.terms ul li {
+    display: inline;
+    padding: 5px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    footer a {
+      display: none;
+    }
+  }
+  
