--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
     background-color: #F4F4F4;
     color: #505050;
   }
-
+  
+/* navbra */
   nav {
     height: 64px;
     display: flex;
@@ -14,6 +15,7 @@ body {
     align-items: center;
   }
 
+/* footer */
 footer {
     display: flex;
     font-size: .75rem;
@@ -21,8 +23,6 @@ footer {
     margin-right: 24px;
     margin-left: 24px;
     margin-top: 16px;
-
-
 
 }
 
@@ -32,8 +32,12 @@ footer {
   }
 
   @media only screen and (max-width: 600px) {
-    footer a {
+    footer .terms
+    ,hr {
       display: none;
+    }
+    footer {
+        justify-content: center;
     }
   }
   
