--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@ body {
     justify-content: space-between;
     align-items: center;
   }
+  .button {
+    justify-content: center;
+  }
 /* card */
 .partonecard {
     padding:32px 24px;
@@ -48,7 +51,7 @@ footer {
   }
 
 
-  @media only screen and (max-width: 713px) {
+  @media only screen and (max-width: 767px) {
     footer .terms
     ,hr {
       display: none;
